# CS4824MLProject

./: Makefile  README.md  pyproject.toml  requirements-gnn.txt
Report/: checklist.tex  main.tex
Report/figures/: make_figures.py
halo/data/: __init__.py  labels.py
halo/gnn/: __init__.py  afdb_download.py  build_graphs.py  esm_embed.py  explain.py  figures.py  model.py  sweep.py  train.py
halo/spec/: __init__.py  classical_models.py  feature_engineering.py  figures.py  kfeatures_sweep.py
halo_class.egg-info/: PKG-INFO  SOURCES.txt
specData/: README.md  sequence_features_test.csv  sequence_features_validation.csv
tests/: test_gnn.py  test_spec.py
